--- a/assets/sass/components/_lists.scss
+++ b/assets/sass/components/_lists.scss
@@ -31,8 +31,8 @@
   display: flex;
   padding: 3px 0;
   gap: 10px;
+  width: 100%;
   &__number {
-    width: 15px;
     text-align: right;
     color: rgba(255, 255, 255, 0.2);
     font-family: "Fira Code", sans-serif;
@@ -50,4 +50,8 @@
     line-height: 14px;
     text-align: center;
   }
+}
+
+.h-100 {
+  height: 100%;
 }
